# job_app_tracker

./: .gitignore  README.md  install.sh  pyproject.toml
src/: db.py
