[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-tracker"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "sqlalchemy",
    "rich",
    "tabulate",
]

[project.scripts]
japp = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
